--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -204,6 +204,10 @@ steps:
             using Pkg
 
             println("--- :julia: Instantiating project")
+            if "{{matrix}}" == "CUTENSORNET"
+              # HACK: CUTENSORNET depends on CUTENSOR
+              Pkg.develop(; path=joinpath(pwd(), "lib", "cutensor"))
+            end
             Pkg.develop(; path=joinpath(pwd(), "lib", lowercase("{{matrix}}")))
             Pkg.activate("{{matrix}}")
 
