--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ BFloat16s = "0.2"
 CEnum = "0.2, 0.3, 0.4"
 ExprTools = "0.1"
 GPUArrays = "8.3.2"
-GPUCompiler = "0.16.2, 0.17"
+GPUCompiler = "0.17"
 LLVM = "4.13"
 Random123 = "1.2"
 RandomNumbers = "1.5.3"
