--- a/lib/custatevec/Project.toml
+++ b/lib/custatevec/Project.toml
@@ -1,4 +1,4 @@
-name = "CUSTATEVEC"
+name = "cuStateVec"
 uuid = "92f7fd98-d22e-4c0d-85a8-6ade11b672fb"
 authors = ["Katharine Hyatt <kslimes@gmail.com>"]
 version = "1.0.0"
