--- a/lib/cudnn/Project.toml
+++ b/lib/cudnn/Project.toml
@@ -1,4 +1,4 @@
-name = "CUDNN"
+name = "cuDNN"
 uuid = "02a925ec-e4fe-4b08-9a7e-0d78e3d38ccd"
 authors = ["Tim Besard <tim.besard@gmail.com>"]
 version = "1.0.0"
