--- a/Project.toml
+++ b/Project.toml
@@ -29,6 +29,7 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+UnsafeAtomicsLLVM = "d80eeb9a-aca5-4d75-85e5-170c8b632249"
 
 [compat]
 AbstractFFTs = "0.4, 0.5, 1.0"
@@ -49,3 +50,4 @@ Reexport = "0.2, 1.0"
 Requires = "0.5, 1.0"
 SpecialFunctions = "1.3, 2"
 julia = "1.6"
+UnsafeAtomicsLLVM = "0.1"
