--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,10 +3,10 @@ steps:
   - group: ":julia: Julia"
     key: "julia"
     steps:
-      - label: "Julia 1.6"
+      - label: "Julia {{matrix.version}}"
         plugins:
           - JuliaCI/julia#v1:
-              version: 1.6
+              version: "{{matrix.version}}"
           - JuliaCI/julia-test#v1:
               test_args: "--quickfail"
           - JuliaCI/julia-coverage#v1:
@@ -22,65 +22,18 @@ steps:
           julia --project -e 'using CUDA; CUDA.set_runtime_version!("local")'
         if: build.message !~ /\[skip tests\]/
         timeout_in_minutes: 120
-
-      - label: "Julia 1.7"
-        plugins:
-          - JuliaCI/julia#v1:
-              version: 1.7
-          - JuliaCI/julia-test#v1: ~
-          - JuliaCI/julia-coverage#v1:
-              codecov: true
-              dirs:
-                - src
-                - lib
-                - examples
-        agents:
-          queue: "juliagpu"
-          cuda: "*"
-        commands: |
-          julia --project -e 'using CUDA; CUDA.set_runtime_version!("local")'
-        if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-        timeout_in_minutes: 120
-
-      - label: "Julia 1.8"
-        plugins:
-          - JuliaCI/julia#v1:
-              version: 1.8
-          - JuliaCI/julia-test#v1: ~
-          - JuliaCI/julia-coverage#v1:
-              codecov: true
-              dirs:
-                - src
-                - lib
-                - examples
-        agents:
-          queue: "juliagpu"
-          cuda: "*"
-        commands: |
-          julia --project -e 'using CUDA; CUDA.set_runtime_version!("local")'
-        if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-        timeout_in_minutes: 120
-
-      - label: "Julia 1.9"
-        plugins:
-          - JuliaCI/julia#v1:
-              version: 1.9-nightly
-          - JuliaCI/julia-test#v1: ~
-          - JuliaCI/julia-coverage#v1:
-              codecov: true
-              dirs:
-                - src
-                - lib
-                - examples
-        agents:
-          queue: "juliagpu"
-          cuda: "*"
-        commands: |
-          julia --project -e 'using CUDA; CUDA.set_runtime_version!("local")'
-        if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-        timeout_in_minutes: 120
-        soft_fail:
-          - exit_status: 1
+        matrix:
+          setup:
+            version:
+              - "1.6"
+              - "1.7"
+              - "1.8"
+              - "1.9-nightly"
+              #- "nightly"
+          adjustments:
+            - with:
+                version: "1.9-nightly"
+              soft_fail: true
 
   # then, test supported CUDA toolkits (installed through the artifact system)
   - group: "CUDA"
@@ -225,27 +178,6 @@ steps:
           intel: "*"
         if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
         timeout_in_minutes: 60
-
-      # - label: "Julia nightly"
-      #   plugins:
-      #     - JuliaCI/julia#v1:
-      #         version: nightly
-      #     - JuliaCI/julia-test#v1: ~
-      #     - JuliaCI/julia-coverage#v1:
-      #         codecov: true
-      #         dirs:
-      #           - src
-      #           - lib
-      #           - examples
-      #   agents:
-      #     queue: "juliagpu"
-      #     cuda: "*"
-      #   commands: |
-      #     julia --project -e 'using CUDA; CUDA.set_runtime_version!("local")'
-      #   if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-      #   timeout_in_minutes: 120
-      #   soft_fail:
-      #     - exit_status: 1
 
       - label: "Documentation"
         plugins:
