--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,10 +3,10 @@ steps:
   - group: ":julia: Julia"
     key: "julia"
     steps:
-      - label: "Julia 1.6"
+      - label: "Julia {{matrix.version}}"
         plugins:
           - JuliaCI/julia#v1:
-              version: 1.6
+              version: "{{matrix.version}}"
           - JuliaCI/julia-test#v1:
               test_args: "--quickfail"
           - JuliaCI/julia-coverage#v1:
@@ -22,65 +22,18 @@ steps:
           julia --project -e 'using CUDA; CUDA.set_runtime_version!("local")'
         if: build.message !~ /\[skip tests\]/
         timeout_in_minutes: 120
-
-      - label: "Julia 1.7"
-        plugins:
-          - JuliaCI/julia#v1:
-              version: 1.7
-          - JuliaCI/julia-test#v1: ~
-          - JuliaCI/julia-coverage#v1:
-              codecov: true
-              dirs:
-                - src
-                - lib
-                - examples
-        agents:
-          queue: "juliagpu"
-          cuda: "*"
-        commands: |
-          julia --project -e 'using CUDA; CUDA.set_runtime_version!("local")'
-        if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-        timeout_in_minutes: 120
-
-      - label: "Julia 1.8"
-        plugins:
-          - JuliaCI/julia#v1:
-              version: 1.8
-          - JuliaCI/julia-test#v1: ~
-          - JuliaCI/julia-coverage#v1:
-              codecov: true
-              dirs:
-                - src
-                - lib
-                - examples
-        agents:
-          queue: "juliagpu"
-          cuda: "*"
-        commands: |
-          julia --project -e 'using CUDA; CUDA.set_runtime_version!("local")'
-        if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-        timeout_in_minutes: 120
-
-      - label: "Julia 1.9"
-        plugins:
-          - JuliaCI/julia#v1:
-              version: 1.9-nightly
-          - JuliaCI/julia-test#v1: ~
-          - JuliaCI/julia-coverage#v1:
-              codecov: true
-              dirs:
-                - src
-                - lib
-                - examples
-        agents:
-          queue: "juliagpu"
-          cuda: "*"
-        commands: |
-          julia --project -e 'using CUDA; CUDA.set_runtime_version!("local")'
-        if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-        timeout_in_minutes: 120
-        soft_fail:
-          - exit_status: 1
+        matrix:
+          setup:
+            version:
+              - "1.6"
+              - "1.7"
+              - "1.8"
+              - "1.9-nightly"
+              #- "nightly"
+          adjustments:
+            - with:
+                version: "1.9-nightly"
+              soft_fail: true
 
   # then, test supported CUDA toolkits (installed through the artifact system)
   - group: "CUDA"
@@ -105,10 +58,10 @@ steps:
         agents:
           queue: "juliagpu"
           cuda: "11.0"
-          cap: "sm_80"
         if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
         timeout_in_minutes: 120
         matrix:
+          - "12.0"
           - "11.8"
           - "11.7"
           - "11.6"
@@ -121,63 +74,9 @@ steps:
         commands: |
           julia --project -e 'using CUDA; CUDA.set_runtime_version!(v"{{matrix}}")'
 
-      # XXX: we cannot set an agents key (cap: "sm_75") via a build matrix
-      - label: "CUDA 10.2"
-        plugins:
-          - JuliaCI/julia#v1:
-              version: 1.6
-          - JuliaCI/julia-test#v1: ~
-          - JuliaCI/julia-coverage#v1:
-              codecov: true
-              dirs:
-                - src
-                - lib
-                - examples
-        agents:
-          queue: "juliagpu"
-          cuda: "10.2"
-          cap: "sm_75"
-        if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-        timeout_in_minutes: 120
-        commands: |
-          julia --project -e 'using CUDA; CUDA.set_runtime_version!(v"10.2")'
-
   - group: ":nesting_dolls: Subpackages"
     depends_on: "cuda"
     steps:
-      - label: "{{matrix}} on CUDA 10"
-        matrix:
-            - "cuDNN"
-            - "cuTENSOR"
-        plugins:
-          - JuliaCI/julia#v1:
-              version: 1.6
-          - JuliaCI/julia-coverage#v1:
-              codecov: true
-              dirs:
-                - src
-                - lib
-                - examples
-        agents:
-          queue: "juliagpu"
-          cuda: "10.2"
-          cap: "sm_75"
-        if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-        timeout_in_minutes: 120
-        commands: |
-          julia -e '
-            using Pkg
-
-            println("--- :julia: Instantiating project")
-            Pkg.activate(joinpath(pwd(), "lib", lowercase("{{matrix}}")))
-            Pkg.develop(path=pwd())
-            Pkg.instantiate()
-
-            using CUDA
-            CUDA.set_runtime_version!(v"10.2")
-
-            println("+++ :julia: Running tests")
-            Pkg.test()'
       - label: "{{matrix}} on CUDA 11"
         matrix:
             - "cuDNN"
@@ -196,7 +95,6 @@ steps:
         agents:
           queue: "juliagpu"
           cuda: "11.0"
-          cap: "sm_80"
         if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
         timeout_in_minutes: 120
         commands: |
@@ -281,27 +179,6 @@ steps:
         if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
         timeout_in_minutes: 60
 
-      # - label: "Julia nightly"
-      #   plugins:
-      #     - JuliaCI/julia#v1:
-      #         version: nightly
-      #     - JuliaCI/julia-test#v1: ~
-      #     - JuliaCI/julia-coverage#v1:
-      #         codecov: true
-      #         dirs:
-      #           - src
-      #           - lib
-      #           - examples
-      #   agents:
-      #     queue: "juliagpu"
-      #     cuda: "*"
-      #   commands: |
-      #     julia --project -e 'using CUDA; CUDA.set_runtime_version!("local")'
-      #   if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-      #   timeout_in_minutes: 120
-      #   soft_fail:
-      #     - exit_status: 1
-
       - label: "Documentation"
         plugins:
           - JuliaCI/julia#v1:
@@ -339,7 +216,6 @@ steps:
         agents:
           queue: "juliagpu"
           cuda: "11.0"
-          cap: "sm_80"
         env:
           JULIA_CUDA_USE_COMPAT: 'false'  # NVIDIA bug #3418723: injection tools prevent probing libcuda
         commands: |
