--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -155,7 +155,7 @@ steps:
   - group: ":telescope: Downstream"
     depends_on: "cuda"
     steps:
-      - label: "NNlibCUDA.jl"
+      - label: "NNlibCUDA.jl on CUDA 12"
         plugins:
           - JuliaCI/julia#v1:
               version: 1.6
@@ -174,6 +174,9 @@ steps:
             Pkg.add(name="NNlibCUDA", rev="master")
             Pkg.instantiate()
 
+            using CUDA
+            CUDA.set_runtime_version!(v"12.0")
+
             println("+++ :julia: Running tests")
             Pkg.test("NNlibCUDA"; coverage=true)'
         agents:
@@ -181,8 +184,6 @@ steps:
           cuda: "*"
         if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
         timeout_in_minutes: 60
-        soft_fail:
-          - exit_status: 1
 
   - group: ":eyes: Special"
     depends_on: "cuda"
