--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -213,29 +213,29 @@ steps:
         if: build.message !~ /\[skip docs\]/ && !build.pull_request.draft
         timeout_in_minutes: 30
 
-      - label: "Compute sanitizer"
-        plugins:
-          - JuliaCI/julia#v1:
-              version: 1.8
-          - JuliaCI/julia-test#v1:
-              julia_args: "-g2"
-              test_args: "--sanitize --quickfail --jobs=2"
-          - JuliaCI/julia-coverage#v1:
-              codecov: true
-              dirs:
-                - src
-                - lib
-                - examples
-        agents:
-          queue: "juliagpu"
-          cuda: "*"
-        env:
-          JULIA_CUDA_USE_COMPAT: 'false'  # NVIDIA bug #3418723: injection tools prevent probing libcuda
-        commands: |
-          julia --project -e 'using CUDA; CUDA.set_runtime_version!(v"11.6")'
-        if: build.message !~ /\[skip tests\]/ &&
-            build.branch =~ /^master$$/
-        timeout_in_minutes: 240
+      # XXX: fails often, and is very slow
+      #- label: "Compute sanitizer"
+      #  plugins:
+      #    - JuliaCI/julia#v1:
+      #        version: 1.8
+      #    - JuliaCI/julia-test#v1:
+      #        julia_args: "-g2"
+      #        test_args: "--sanitize --quickfail --jobs=2"
+      #    - JuliaCI/julia-coverage#v1:
+      #        codecov: true
+      #        dirs:
+      #          - src
+      #          - lib
+      #          - examples
+      #  agents:
+      #    queue: "juliagpu"
+      #    cuda: "*"
+      #  env:
+      #    JULIA_CUDA_USE_COMPAT: 'false'  # NVIDIA bug #3418723: injection tools prevent probing libcuda
+      #  commands: |
+      #    julia --project -e 'using CUDA; CUDA.set_runtime_version!(v"11.6")'
+      #  if: build.message !~ /\[skip tests\]/
+      #  timeout_in_minutes: 240
 
   # we want to benchmark every commit on the master branch, even if it failed CI
   - wait: ~
