--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -8,9 +8,8 @@ steps:
           - JuliaCI/julia#v1:
               version: "{{matrix.julia}}"
           - JuliaCI/julia-test#v1:
-              test_args: "--quickfail"
-          - JuliaCI/julia-coverage#v1:
-              codecov: true
+              test_args: "--quickfail cudadrv"
+          - JuliaCI/julia-coverage#e16e9eb:
               dirs:
                 - src
                 - lib
@@ -48,9 +47,8 @@ steps:
           - JuliaCI/julia#v1:
               version: 1.8
           - JuliaCI/julia-test#v1:
-              test_args: "--thorough"
-          - JuliaCI/julia-coverage#v1:
-              codecov: true
+              test_args: "--thorough cudadrv"
+          - JuliaCI/julia-coverage#e16e9eb:
               dirs:
                 - src
                 - lib
@@ -97,8 +95,7 @@ steps:
         plugins:
           - JuliaCI/julia#v1:
               version: "1.8"
-          - JuliaCI/julia-coverage#v1:
-              codecov: true
+          - JuliaCI/julia-coverage#e16e9eb:
               dirs:
                 - src
                 - lib
@@ -134,8 +131,7 @@ steps:
         plugins:
           - JuliaCI/julia#v1:
               version: 1.8
-          - JuliaCI/julia-coverage#v1:
-              codecov: true
+          - JuliaCI/julia-coverage#e16e9eb:
               dirs:
                 - src
                 - lib
@@ -168,8 +164,7 @@ steps:
         plugins:
           - JuliaCI/julia#v1:
               version: 1.8
-          - JuliaCI/julia-coverage#v1:
-              codecov: true
+          - JuliaCI/julia-coverage#e16e9eb:
               dirs:
                 - src
                 - lib
@@ -221,8 +216,7 @@ steps:
       #    - JuliaCI/julia-test#v1:
       #        julia_args: "-g2"
       #        test_args: "--sanitize --quickfail --jobs=2"
-      #    - JuliaCI/julia-coverage#v1:
-      #        codecov: true
+      #    - JuliaCI/julia-coverage#e16e9eb:
       #        dirs:
       #          - src
       #          - lib
