--- a/lib/custatevec/Project.toml
+++ b/lib/custatevec/Project.toml
@@ -1,7 +1,7 @@
 name = "cuStateVec"
 uuid = "92f7fd98-d22e-4c0d-85a8-6ade11b672fb"
 authors = ["Katharine Hyatt <kslimes@gmail.com>"]
-version = "1.0.2"
+version = "1.0.3"
 
 [deps]
 CEnum = "fa961155-64e5-5f13-b03f-caf6b980ea82"
@@ -10,6 +10,6 @@ cuQuantum_jll = "b75408ef-6fdf-5d74-b65a-7df000ad18e6"
 
 [compat]
 cuQuantum_jll = "~22.11"
-CUDA = "~4.0, ~4.1"
+CUDA = "~4.0, ~4.1, ~4.2"
 CEnum = "0.2, 0.3, 0.4"
 julia = "1.6"
